@@ -1,7 +1,0 @@
-﻿
-namespace System.Runtime.CompilerServices
-{
-    class CompilerGeneratedAttribute : Attribute
-    {
-    }
-}
